태그에서 chatroom으로 수정

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
             <h5>입장 중인 방</h5>
             <ul>
               <% current_user.chatrooms.each do |chatroom| %>
-                <li><%= link_to chatroom.name, "#" %></li>
+                <li><%= link_to chatroom.name, chatroom %></li>
               <% end %>
             </ul>
           <% end %>
