--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,29 +1,53 @@
-<p id="notice"><%= notice %></p>
+<div class="fluid-container">
+  <div class="row">
+    <div class="col-sm-2">
+      <% if user_signed_in? %>
+      <h5>입장 중인 방</h5>
+      <ul>
+        <% current_user.chatrooms.each do |chatroom| %>
+        <li><%= link_to chatroom.name, chatroom %></li>
+        <% end %>
+      </ul>
+      <% end %>
+    </div>
 
-<h1>개설된 채팅방</h1>
+    <div class="col-sm-10">
+<!-- 왼쪽 입장 중인 방 표시 -->
 
-<table>
-  <thead>
-    <tr>
-      <th>제목</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <p id="notice"><%= notice %></p>
 
-  <tbody>
-    <% @chatrooms.each do |chatroom| %>
-      <tr>
-        <td><%= chatroom.name %></td>
-        <td><%= link_to 'Show', chatroom %></td>
-        <td><%= link_to 'Edit', edit_chatroom_path(chatroom) %></td>
-        <td><%= link_to 'Destroy', chatroom, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to '입장', chatroom_chatroom_users_path(chatroom), method: :post %></td>
-        <td><%= link_to '나가기', chatroom_chatroom_users_path(chatroom), method: :delete %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <h1>개설된 채팅방</h1>
 
-<br>
+      <table>
+        <thead>
+          <tr>
+            <th>제목</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<%= link_to '채팅방 만들기', new_chatroom_path %>
+        <tbody>
+          <% @chatrooms.each do |chatroom| %>
+          <tr>
+            <td><%= chatroom.name %></td>
+            <td><%= link_to 'Show', chatroom %></td>
+            <td><%= link_to 'Edit', edit_chatroom_path(chatroom) %></td>
+            <td><%= link_to 'Destroy', chatroom, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to '입장', chatroom_chatroom_users_path(chatroom), method: :post %></td>
+            <td><%= link_to '나가기', chatroom_chatroom_users_path(chatroom), method: :delete %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+
+      <br>
+
+      <%= link_to '채팅방 만들기', new_chatroom_path %>
+
+
+<!-- 여기까지 -->
+
+
+    </div>
+  </div>
+</div>
