--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,9 @@
  */
 @import "bootstrap";
 @import "bootstrap-sprockets";
+
+
+.navbar{ 
+	background-color: rgba(255,255,255,0.5) !important;
+	border-bottom: none;
+}
