--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,13 +1,3 @@
 
-
-          <%= link_to main_index_url, class: "navbar-brand" do %>
-            메인 페이지
-          <% end %>
-
-          <%= link_to question_index_url, class: "navbar-brand" do %>
-            질문 게시판
-          <% end %>
-
-          <%= link_to chatrooms_path, class: "navbar-brand" do %>
-            LIVE 채팅
-          <% end %>
+          <%= link_to '질문 게시판', question_index_url %>
+          <%= link_to 'LIVE 채팅', chatrooms_path %>
