--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,6 @@
 
 
 .navbar{ 
-	background-color: rgba(255,255,255,0.5) !important;
+	background-color: rgba(255, 255, 255, 0) !important;
 	border-bottom: none;
 }
