--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,4 +1,4 @@
-<div class="fluid-container">
+<div class="fluid-container" style="margin-top: 70px">
   <div class="row">
     <div class="col-sm-2">
       <% if user_signed_in? %>
