--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,6 +1,6 @@
 <div class="fluid-container" style="margin-top: 70px">
   <div class="row">
-    <div class="col-sm-2">
+    <div class="col-sm-2" style="position: fixed; top: 70px; left: 0;">
       <% if user_signed_in? %>
       <h5>입장 중인 방</h5>
       <ul>
@@ -11,7 +11,7 @@
       <% end %>
     </div>
 
-    <div class="col-sm-10">
+    <div class="col-sm-10 col-sm-offset-2">
 <!-- 왼쪽 입장 중인 방 표시 -->
 
       <p id="notice"><%= notice %></p>
