--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,10 +1,35 @@
-<p>
-  <strong>Name:</strong>
-  <%= @chatroom.name %>
-</p>
+<div class="fluid-container" style="margin-top: 70px">
+  <div class="row">
+    <div class="col-sm-2" style="position: fixed; top: 70px; left: 0;">
+      <% if user_signed_in? %>
+      <h5>입장 중인 방</h5>
+      <ul>
+        <% current_user.chatrooms.each do |chatroom| %>
+        <li><%= link_to chatroom.name, chatroom %></li>
+        <% end %>
+      </ul>
+      <% end %>
+    </div>
 
-<div data-behavior='messages'>
-	<% 1.upto(1000) do %>
-		<div><strong>excid3:</strong>Hello world!</div>
-	<% end %>
+    <div class="col-sm-10 col-sm-offset-2">
+
+
+
+		<p>
+		  <strong>Name:</strong>
+		  <%= @chatroom.name %>
+		</p>
+
+		<div data-behavior='messages'>
+			<% 1.upto(1000) do %>
+				<div><strong>excid3:</strong>Hello world!</div>
+			<% end %>
+		</div>
+
+
+
+
+
+    </div>
+  </div>
 </div>
