--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,6 @@
-
-          <%= link_to '질문 게시판', question_index_url %>
-          <%= link_to 'LIVE 채팅', chatrooms_path %>
+<div>
+    <a href="#">서비스 소개</a>
+	<a href="/question/index">질문 게시판</a>
+	<a href="/chatrooms">LIVE 채팅</a>
+    
+</div>
