--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -21,9 +21,12 @@
 		</p>
 
 		<div data-behavior='messages'>
-			<% 1.upto(1000) do %>
-				<div><strong>excid3:</strong>Hello world!</div>
-			<% end %>
+      <% @messages.each do |message| %>
+        <div>
+          <strong><%= message.user.username %>:</strong>
+          <%= message.body %>
+        </div>
+      <% end %>
 		</div>
 
 		<%= form_for [@chatroom, Message.new] do |f| %>
